manifests/04-gateway-api/gateway-class.yaml
# AWS ALB GatewayClass — managed by AWS Load Balancer Controller
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: alb
  labels:
    app.kubernetes.io/part-of: vedmich-gatewaydemo
spec:
  controllerName: gateway.k8s.aws/alb
